dev/monitoring/alertmanager-dashboard/alertmanager-ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`alertmanager.imroc.io`)
    kind: Rule
    middlewares:
    - name: monitoring-auth
    services:
    - name: alertmanager-main
      port: 9093
  tls:
    secretName: alertmanager-imroc-io-tls
